Add `say_hello`; update index

--- a/_proc/index.ipynb
+++ b/_proc/index.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "This is still very much a first cut, doesn't really do anything."
    ]
   },
   {
@@ -67,7 +67,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "13"
       ]
      },
      "execution_count": null,
@@ -76,7 +76,7 @@
     }
    ],
    "source": [
-    "1+1"
+    "1+12"
    ]
   },
   {
