--- a/_proc/00_core.ipynb
+++ b/_proc/00_core.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "description: Fill in a module description here\n",
+    "description: This is a demo from the walkthrough of nbdev\n",
     "output-file: core.html\n",
     "title: core\n",
     "\n",
@@ -31,12 +31,16 @@
       "text/markdown": [
        "---\n",
        "\n",
+       "[source](https://github.com/cbrew/nbdev-demo-cbrew/blob/main/nbdev_demo_cbrew/core.py#L7){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "\n",
        "### foo\n",
        "\n",
        ">      foo ()"
       ],
       "text/plain": [
        "---\n",
+       "\n",
+       "[source](https://github.com/cbrew/nbdev-demo-cbrew/blob/main/nbdev_demo_cbrew/core.py#L7){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### foo\n",
        "\n",
@@ -57,9 +61,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
