--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file will become your README and also the index of your documentation."
+    "This is still very much a first cut, doesn't really do anything."
    ]
   },
   {
@@ -64,7 +64,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "13"
       ]
      },
      "execution_count": null,
@@ -73,7 +73,7 @@
     }
    ],
    "source": [
-    "1+1"
+    "1+12"
    ]
   },
   {
